[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-network-node"
description = 'Zero network blockchain node'
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/node/'
repository = 'https://github.com/zero-network/node/'
readme = 'README.md'
